Fix T93574: Asset triangulating a mesh

Correct assert for edit-mesh normal calculation.